Update README file

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
 }
@@ -82,6 +82,131 @@ input {
 
 .newScore:nth-child(odd) {
   background-color: #f2f2f2;
+}
+
+.border {
+  min-height: 2px;
+  width: 100%;
+  margin-top: 20px;
+  border: 1px solid black;
+} */
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  background-color: #f9f9f9;
+}
+
+h1 {
+  margin-top: 36px;
+  margin-left: 120px;
+  margin-bottom: 36px;
+  color: #3c3c3c;
+  font-size: 40px;
+  font-family: "Poppins", sans-serif;
+}
+
+.col1 {
+  margin-left: 60px;
+  width: 25%;
+  font-family: "Poppins", sans-serif;
+}
+
+#refresh {
+  width: 100px;
+  height: 30px;
+  margin-top: 6px;
+  font-family: "Poppins", sans-serif;
+  box-shadow: 2px 2px black;
+  color: #3c3c3c;
+  background-color: aqua;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.row1 {
+  display: flex;
+  gap: 30px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  flex-wrap: wrap;
+}
+
+ul li {
+  list-style: none;
+  padding-left: 6px;
+  height: 30px;
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+}
+
+.col2 {
+  margin-right: 240px;
+  width: 22.2%;
+  margin-left: 60px;
+  font-family: "Poppins", sans-serif;
+}
+
+h2 {
+  margin-bottom: 20px;
+  color: #3c3c3c;
+  font-family: "Poppins", sans-serif;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  height: 200px;
+  padding-left: 30px;
+  box-shadow: rgba(0, 0, 0, 0.56) 0 22px 70px 4px;
+}
+
+input {
+  margin-bottom: 20px;
+  width: 300px;
+  font-family: "Poppins", sans-serif;
+}
+
+#submit {
+  width: 100px;
+  height: 30px;
+  margin-left: 205px;
+  font-family: "Poppins", sans-serif;
+  box-shadow: 2px 2px black;
+  color: #3c3c3c;
+  background-color: aqua;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.scoresCont {
+  width: 100%;
+  min-height: 30px;
+  margin-bottom: 48px;
+  border: 1px solid black;
+}
+
+.newScore {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 500;
+  height: 35px;
+  width: 98%;
+  margin-left: 0;
+  padding-left: 6px;
+}
+
+ul li:nth-child(odd) {
+  background-color: aqua;
 }
 
 .border {
